--- a/webapp/view/StockOverviewList.view.xml
+++ b/webapp/view/StockOverviewList.view.xml
@@ -19,14 +19,11 @@
 				id="idStockOverviewListTable"
 				width="auto"
 				items="{
-					path: 'matlStockSrv>/A_MatlStkInAcctMod',
+					path: 'customStockSrv>/YY1_Warehouse_Stock',
 					sorter: {
 						path: 'Material',
 						descending: false
-					},
-					filters : [
-						{ path : 'Material', operator : 'NE', value1 : ''}
-					]
+					}
 				}"
 				noDataText="{listView>/tableNoDataText}"
 				busyIndicatorDelay="{listView>/tableBusyDelay}"
@@ -51,20 +48,26 @@
 				</headerToolbar>
 
 				<columns>
-					<Column>
+					<Column width="auto" >
 						<Text text="Material" />
 					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true" >
+					<Column width="auto" >
 						<Text text="Plant" />
 					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
+					<Column width="17.5%" minScreenWidth="Tablet" demandPopin="true">
 						<Text text="Storage Location" />
 					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
+					<Column width="15%" minScreenWidth="Desktop" demandPopin="true">
 						<Text text="Batch" />
 					</Column>
-					<Column hAlign="End">
-						<Text text="Stock Qty" />
+					<Column width="auto" hAlign="End">
+						<Text text="Stock on Hand" />
+					</Column>
+					<Column width="10%" minScreenWidth="Tablet" demandPopin="true" hAlign="End">
+						<Text text="Quality" />
+					</Column>
+					<Column width="10%" minScreenWidth="Tablet" demandPopin="true" hAlign="End">
+						<Text text="Blocked" />
 					</Column>
 				</columns>
 
@@ -73,16 +76,19 @@
 						type="Navigation"
 						press="onPress">
 						<cells>
-							<ObjectIdentifier title="{matlStockSrv>Material}"/>
-							<ObjectIdentifier title="{matlStockSrv>Plant}"/>
-							<ObjectIdentifier title="{matlStockSrv>StorageLocation}"/>
-							<ObjectIdentifier title="{matlStockSrv>Batch}"/>
+							<ObjectIdentifier title="{customStockSrv>Material}" text="{customStockSrv>ProductName}" />
+							<ObjectIdentifier title="{customStockSrv>Plant}" text="{customStockSrv>PlantName}" />
+							<ObjectIdentifier title="{customStockSrv>StorageLocation}" text="{customStockSrv>StorageLocationName}" />
+							<ObjectIdentifier title="{customStockSrv>Batch}"/>
 							<ObjectNumber
-								number="{
-									path: 'matlStockSrv>MatlWrhsStkQtyInMatlBaseUnit',
-									formatter: '.formatter.numberUnit'
-								}"
-								unit="{matlStockSrv>MaterialBaseUnit}"/>
+								number="{ path: 'customStockSrv>StockOnHand', formatter: '.formatter.numberUnit' }"
+								unit="{customStockSrv>MaterialBaseUnit}" />
+							<ObjectNumber
+								number="{ path: 'customStockSrv>StockQuality', formatter: '.formatter.numberUnit' }"
+								unit="{customStockSrv>MaterialBaseUnit}" />
+							<ObjectNumber
+								number="{ path: 'customStockSrv>StockBlocked', formatter: '.formatter.numberUnit' }"
+								unit="{customStockSrv>MaterialBaseUnit}" />
 						</cells>
 					</ColumnListItem>
 				</items>
