--- a/webapp/view/StockOverviewList.view.xml
+++ b/webapp/view/StockOverviewList.view.xml
@@ -94,7 +94,11 @@
 				</items>
 			</Table>
 		</semantic:content>
-
+		
+		<semantic:titleCustomIconActions>
+			<OverflowToolbarButton icon="sap-icon://menu" text="Menu" press="onPressMenu" />
+		</semantic:titleCustomIconActions>
+		
 		<semantic:sendEmailAction>
 			<semantic:SendEmailAction press="onShareEmailPress"/>
 		</semantic:sendEmailAction>
