--- a/webapp/view/StockOverviewList.view.xml
+++ b/webapp/view/StockOverviewList.view.xml
@@ -49,8 +49,7 @@
 							id="idBarcodeScannerButton"
 							scanSuccess="onScanSuccess"
 							scanFail="onScanError"
-							inputLiveUpdate="onScanLiveupdate"
-							dialogTitle="Barcode Scanner Button Sample" >
+							dialogTitle="Barcode Scanner" >
 						</ndc:BarcodeScannerButton>
 					</OverflowToolbar>
 				</headerToolbar>
