Add basic Goods Receipt List page

--- a/webapp/view/MainList.view.xml
+++ b/webapp/view/MainList.view.xml
@@ -35,6 +35,8 @@
 					<StandardListItem
 						title="Goods Receipt"
 						description="Purchase Orders"
+						press="onGoodsReceiptPress"
+						type="Active"
 						icon="sap-icon://add-product"
 						iconDensityAware="false"
 						iconInset="false" />
