--- a/webapp/view/ObjectNotFound.view.xml
+++ b/webapp/view/ObjectNotFound.view.xml
@@ -10,7 +10,7 @@
 		description=""
 		id="page">
 		<customDescription>
-			<Link id="link" text="{i18n>backToWorklist}" press=".onLinkPressed" />
+			<Link id="link" text="{i18n>backToMainList}" press=".onLinkPressed" />
 		</customDescription>
 	</MessagePage>
 
