--- a/webapp/view/GoodsReceiptDetail.view.xml
+++ b/webapp/view/GoodsReceiptDetail.view.xml
@@ -13,15 +13,15 @@
 		headerPinnable="true"
 		toggleHeaderOnTitleClick="true"
 		showFooter="true"
-		busy="{detailView>/busy}"
-		busyIndicatorDelay="{detailView>/delay}">
+		busy="{viewModel>/busy}"
+		busyIndicatorDelay="{viewModel>/delay}">
 
 		<semantic:titleHeading>
-			<Title text="{orderModel>/d/PurchaseOrder}" level="H2"/>
+			<Title text="{viewModel>/purchaseOrder}" level="H2"/>
 		</semantic:titleHeading>
 		
 		<semantic:headerContent>
-			<ObjectAttribute title="Supplier" text="{supplierModel>/d/SupplierName} ({orderModel>/d/Supplier})" />
+			<ObjectAttribute title="Supplier" text="{supplierModel>/d/SupplierName} ({supplierModel>/d/Supplier})" />
 		</semantic:headerContent>
 
 		<semantic:content>
@@ -29,6 +29,7 @@
 				<Panel>
 		
 					<f:SimpleForm
+						id="idHeaderForm"
 						class="editableForm"
 						columnsL="1"
 						columnsM="1"
@@ -47,16 +48,20 @@
 							<DatePicker
 								id="idDocumentDate"
 								required="true"
+								change="onChanged"
+								dateValue="{createModel>/DocumentDate}"
 								displayFormat="dd.MM.yyyy" />
 								
 							<Label text="Posting Date" />
 							<DatePicker
 								id="idPostingDate"
 								required="true"
+								change="onChanged"
+								dateValue="{createModel>/PostingDate}"
 								displayFormat="dd.MM.yyyy" />
 							
 							<Label text="Printing" />
-							<ComboBox selectedKey="0" >
+							<ComboBox selectedKey="{createModel>/VersionForPrintingSlip}" >
 								<items>
 									<core:Item key="0" text="No Print" />
 									<core:Item key="1" text="Individual Slip" />
@@ -65,11 +70,14 @@
 								</items>
 							</ComboBox>
 							
-							<Label text="Delivery Note" required="true" />
-							<Input />
+							<Label text="Delivery Note" />
+							<Input
+								value="{createModel>/ReferenceDocument}"
+								change="onChanged"
+								required="true" />
 							
-							<Label text="Comments" />
-							<TextArea maxLength="200" />
+							<Label text="Header Text" />
+							<Input value="{createModel>/MaterialDocumentHeaderText}" />
 							
 						</f:content>
 					</f:SimpleForm>
@@ -91,11 +99,11 @@
 		</semantic:sendEmailAction>
 
 		<semantic:saveAsTileAction>
-			<footerbar:AddBookmarkButton title="{detailView>/saveAsTileTitle}"/>
+			<footerbar:AddBookmarkButton title="{viewModel>/saveAsTileTitle}"/>
 		</semantic:saveAsTileAction>
 		
 		<semantic:footerMainAction>
-			<semantic:FooterMainAction text="Post" press="onPost" />
+			<semantic:FooterMainAction text="Post" press="onPost" enabled="{viewModel>/enableSave}" />
 		</semantic:footerMainAction>
 		
 		<semantic:footerCustomActions>
