--- a/webapp/view/GoodsReceiptItems.fragment.xml
+++ b/webapp/view/GoodsReceiptItems.fragment.xml
@@ -4,7 +4,7 @@
 	
 	<Table 
 		items="{ 
-			path: 'orderModel>/d/to_PurchaseOrderItem/results', 
+			path: 'createModel>/to_MaterialDocumentItem/results', 
 			sorter: { path: 'PurchaseOrderItem' }, 
 			templateShareable: false }"
 		width="auto"
@@ -43,14 +43,14 @@
 		<items>
 			<ColumnListItem>
 				<cells>
-					<Text text="{orderModel>PurchaseOrderItem}"/>
+					<Text text="{createModel>PurchaseOrderItem}"/>
 					
-					<ObjectIdentifier title="{orderModel>PurchaseOrderItemText}" text="{orderModel>Material}"/>
+					<ObjectIdentifier title="{createModel>MaterialDocumentItemText}" text="{createModel>Material}"/>
 					
-					<ObjectIdentifier title="{orderModel>Plant}" />
+					<ObjectIdentifier title="{createModel>Plant}" />
 					
 					<Input
-						value="{orderModel>StorageLocation}"
+						value="{createModel>StorageLocation}"
 						liveChange="onLiveChangeStoreLoc"
 						showValueHelp="true"
 						valueHelpRequest="onHandleValueHelpStoreLoc"
@@ -90,14 +90,17 @@
 							</ColumnListItem>
 						</suggestionRows>
 						<customData>
-							<core:CustomData key="Material" value="{orderModel>Material}" />
-							<core:CustomData key="Plant" value="{orderModel>Plant}" />
+							<core:CustomData key="Material" value="{createModel>Material}" />
+							<core:CustomData key="Plant" value="{createModel>Plant}" />
 						</customData>
 					</Input>
 					
-					<Input value="{orderModel>OrderQuantity}" type="Number" />
+					<Input
+						value="{createModel>QuantityInEntryUnit}"
+						change="onChanged"
+						type="Number" />
 					
-					<Text text="{orderModel>PurchaseOrderQuantityUnit}"/>
+					<Text text="{createModel>EntryUnit}"/>
 					
 					<Button
 						icon="sap-icon://delete"
