Fix attachment issue and nav to List after post

--- a/webapp/view/Attachments.fragment.xml
+++ b/webapp/view/Attachments.fragment.xml
@@ -7,9 +7,7 @@
 		id="idUploadCollection"
 		uploadEnabled="true"
 		instantUpload="false"
-		maxFileSize="10"
-		beforeUploadStarts="onBeforeUploadStarts"
-		fileSizeExceeded="onFileSizeExceeded">
+		beforeUploadStarts="onBeforeUploadStarts">
 		<upload:toolbar>
 			<OverflowToolbar>
 				<Title text="Attachments" />
