Change Search Field ID to fieldGroupId to fix issue in Dialog

--- a/webapp/view/GoodsReceiptList.view.xml
+++ b/webapp/view/GoodsReceiptList.view.xml
@@ -39,7 +39,7 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsReceiptList"
 							level="H3"/>
 						<ToolbarSpacer />
 						<SearchField
-							id="idSearchField"
+							fieldGroupIds="idSearchFieldGrp"
 							search="onSearch">
 							<layoutData>
 								<OverflowToolbarLayoutData
