--- a/webapp/view/StockOverviewList.view.xml
+++ b/webapp/view/StockOverviewList.view.xml
@@ -37,7 +37,7 @@
 							level="H3"/>
 						<ToolbarSpacer />
 						<SearchField
-							id="idSearchField"
+							fieldGroupIds="idSearchFieldGrp"
 							search="onSearch">
 							<layoutData>
 								<OverflowToolbarLayoutData
