--- a/webapp/view/StocktakeList.view.xml
+++ b/webapp/view/StocktakeList.view.xml
@@ -39,7 +39,7 @@
 							level="H3"/>
 						<ToolbarSpacer />
 						<SearchField
-							id="idSearchField"
+							fieldGroupIds="idSearchFieldGrp"
 							search="onSearch">
 							<layoutData>
 								<OverflowToolbarLayoutData
